# django-celery

./: Dockerfile  docker-compose.yml  pyproject.toml
django_celery/: db.sqlite3
django_celery/django_celery/: settings.py  urls.py
django_celery/django_celery/api/: models.py  serializer.py  urls.py  views.py
django_celery/django_celery/api/migrations/: 0001_initial.py
